@@ -1,6 +1,7 @@
 Changelog for Catmandu-RDF
 
 {{$NEXT}}
+  - add triples importer mode (issue #5)
   - disable namespaces with ns=0 (issue #8) 
   - support importing from string reference
 
